# Image-Processing

./: CMakeLists.txt  CannyEdgeDetection.cpp  ClosingBinary.cpp  ClosingGrayscale.cpp  DilationBinary.cpp  DilationGrayscale.cpp  ErosionBinary.cpp  ErosionGrayscale.cpp  Histogram.cpp  Medical_Processing.pro  MorphologicalDistanceTransform.cpp  MorphologicalEdgeDetection.cpp  MorphologicalGradient.cpp  MorphologicalGrayscaleReconstruction.cpp  MorphologicalSkeleton.cpp  MorphologicalSkeletonRestoration.cpp  NoiseReduction.cpp  OpeningBinary.cpp  OpeningGrayscale.cpp  README.md  ShowImage.cpp  Sobel.cpp  Threshold.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
